k8s/applications/web/mastodon-chart/mastodon.yaml
---
# Source: mastodon/templates/service-streaming.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-streaming
  labels:
    helm.sh/chart: mastodon-6.5.2
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: mastodon
    
    app.kubernetes.io/version: "v4.4.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: streaming
      protocol: TCP
      name: streaming
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: mastodon
    app.kubernetes.io/component: streaming
---
# Source: mastodon/templates/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon-web
  labels:
    helm.sh/chart: mastodon-6.5.2
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: mastodon
    
    app.kubernetes.io/version: "v4.4.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: mastodon
    app.kubernetes.io/component: web
---
# Source: mastodon/templates/deployment-sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-sidekiq-all-queues
  labels:
    helm.sh/chart: mastodon-6.5.2
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: mastodon
    
    app.kubernetes.io/version: "v4.4.3"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: sidekiq-all-queues
    app.kubernetes.io/part-of: rails
  annotations:
spec:
  strategy:
    type: Recreate
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
      app.kubernetes.io/instance: mastodon
      app.kubernetes.io/component: sidekiq-all-queues
      app.kubernetes.io/part-of: rails
  template:
    metadata:
      annotations:
        # roll the pods to pick up any db migrations or other changes
        
        rollme: "1"
        checksum/config-secrets: "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
        checksum/config-configmap: "be4fa19a85caddb8fa9ed0c5eb2796d9453cdeac11a6659ce2a52862a3e9c05f"
        checksum/config-secrets-smtp: "e65924ed98dfffe217e5d30cbf31cffce7102835159d83bee8958ac74dc26465"
      labels:
        
        app.kubernetes.io/name: mastodon
        app.kubernetes.io/instance: mastodon
        
        app.kubernetes.io/component: sidekiq-all-queues
        app.kubernetes.io/part-of: rails
    spec:
      serviceAccountName: mastodon
      securityContext:
        fsGroup: 991
        runAsGroup: 991
        runAsUser: 991
      volumes:
        - name: assets
          persistentVolumeClaim:
            claimName: mastodon-assets
        - name: system
          persistentVolumeClaim:
            claimName: mastodon-system        
      containers:
        - name: mastodon
          image: "ghcr.io/glitch-soc/mastodon:v4.4.3"
          imagePullPolicy: IfNotPresent
          command:
            - bundle
            - exec
            - sidekiq
            - -c
            - "5"
          volumeMounts:
            - name: assets
              mountPath: /opt/mastodon/public/assets
            - name: system
              mountPath: /opt/mastodon/public/system
          resources:
            {}
---
# Source: mastodon/templates/deployment-streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-streaming
  labels:
    helm.sh/chart: mastodon-6.5.2
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: mastodon
    
    app.kubernetes.io/version: "v4.4.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 10%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
      app.kubernetes.io/instance: mastodon
      app.kubernetes.io/component: streaming
  template:
    metadata:
      annotations:
        # roll the pods to pick up any db migrations or other changes
        
        rollme: "1"
        checksum/config-secrets: "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
        checksum/config-configmap: "be4fa19a85caddb8fa9ed0c5eb2796d9453cdeac11a6659ce2a52862a3e9c05f"
      labels:
        
        app.kubernetes.io/name: mastodon
        app.kubernetes.io/instance: mastodon
        app.kubernetes.io/component: streaming
    spec:
      serviceAccountName: mastodon
      securityContext:
        fsGroup: 991
        runAsGroup: 991
        runAsUser: 991
      containers:
        - name: mastodon-streaming
          image: "ghcr.io/mastodon/mastodon-streaming:v4.4.3"
          imagePullPolicy: IfNotPresent
          command:
            - node
            - ./streaming
          ports:
            - name: streaming
              containerPort: 4000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
          readinessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
          startupProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
            initialDelaySeconds: 5
            failureThreshold: 15
            periodSeconds: 5
---
# Source: mastodon/templates/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-web
  labels:
    helm.sh/chart: mastodon-6.5.2
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: mastodon
    
    app.kubernetes.io/version: "v4.4.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 10%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
      app.kubernetes.io/instance: mastodon
      app.kubernetes.io/component: web
      app.kubernetes.io/part-of: rails
  template:
    metadata:
      annotations:
        # roll the pods to pick up any db migrations or other changes
        
        rollme: "1"
        checksum/config-secrets: "01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b"
        checksum/config-configmap: "be4fa19a85caddb8fa9ed0c5eb2796d9453cdeac11a6659ce2a52862a3e9c05f"
      labels:
        
        app.kubernetes.io/name: mastodon
        app.kubernetes.io/instance: mastodon
        
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: rails
    spec:
      serviceAccountName: mastodon
      securityContext:
        fsGroup: 991
        runAsGroup: 991
        runAsUser: 991
      volumes:
        - name: assets
          persistentVolumeClaim:
            claimName: mastodon-assets
        - name: system
          persistentVolumeClaim:
            claimName: mastodon-system        
      containers:
        - name: mastodon-web
          image: "ghcr.io/glitch-soc/mastodon:v4.4.3"
          imagePullPolicy: IfNotPresent
          command:
            - bundle
            - exec
            - puma
            - -C
            - config/puma.rb
          volumeMounts:
            - name: assets
              mountPath: /opt/mastodon/public/assets
            - name: system
              mountPath: /opt/mastodon/public/system
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            failureThreshold: 30
            periodSeconds: 5
---
# Source: mastodon/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon
  labels:
    helm.sh/chart: mastodon-6.5.2
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: mastodon
    
    app.kubernetes.io/version: "v4.4.3"
    app.kubernetes.io/managed-by: Helm
spec:
  tls:
    - hosts:
        - "mastodon.local"
      secretName: mastodon-tls
  rules:
    - host: "mastodon.local"
      http:
        paths:
          - path: /
            backend:
              service:
                name: mastodon-web
                port:
                  number: 3000
            pathType: Prefix
          - path: /api/v1/streaming
            backend:
              service:
                name: mastodon-streaming
                port:
                  number: 4000
            pathType: Prefix
---
# Source: mastodon/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "mastodon-test-connection"
  labels:
    helm.sh/chart: mastodon-6.5.2
    app.kubernetes.io/name: mastodon
    app.kubernetes.io/instance: mastodon
    
    app.kubernetes.io/version: "v4.4.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['mastodon-web:80']
  restartPolicy: Never
